<resources>
    <string name="app_name">PassControl</string>
    <string name="way1">人脸认证</string>
    <string name="way2">刷卡验证</string>
    <string name="way4">二维码验证</string>
    <string name="way3">指静脉验证</string>
    <string name="again_finger">请移开手指,再次放置...</string>
    <string name="no_manager">抱歉您非管理员</string>
    <string name="same_finger">验证错误，请放置同一根手指</string>
    <string name="wait_amoment">请求中,请稍后...</string>
    <string name="member">会员</string>
    <string name="consume_lesson_today">今日上课</string>
    <string name="consume_lesson_ok">消课成功</string>
    <string name="lesson_left">剩余课程</string>
    <string name="had_consume_lesson">已上课</string>
    <string name="no_consume_lesson">待预约</string>
    <string name="manager">管理员</string>
    <string name="lesson_in">团课进场</string>
    <string name="register">注册绑定</string>
    <string name="bind_veune">指静脉绑定</string>
    <string name="bind_face">人脸绑定</string>
    <string name="lesson_consume">私教消课</string>
    <string name="buy">购买</string>
    <string name="advantage_name">减脂增肌</string>
    <string name="tips">温  馨  提  示</string>
    <string name="coach_introduce">教  练  介  绍</string>
    <string name="lesson_introduce">课  程  详  情</string>
    <string name="advantage_lesson">擅  长  课  程</string>
    <string name="lesson_introduce_detail">课  程  介 绍</string>
    <string name="coach_verify">教  练  认  证</string>
    <string name="message">擅长曾几何时，健身的代名词还是而现在提到健身，大家想到的都是到底是什么？它为何能风靡世界甚至成为健身的代名词？今天百科君就带你认识一下</string>
    <string name="please_input_tel">请输入手机号</string>
    <string name="please_input_verify">请输入验证码</string>
    <string name="lesson_pre">预约</string>
    <string name="psw_login">密码登陆</string>
    <string name="use_psw">使用密码</string>
    <string name="pay_restTime">支付倒计时</string>
    <string name="confirm_pay">确认支付</string>
    <string name="group_lesson_pay">团操课支付</string>
    <string name="handy_venue">指静脉登陆</string>
    <string name="handy_venue_intro">请验证已有的指静脉，用于管理员登录</string>
    <string name="handy_venue_pay_intro">请验证已有的指静脉，用于支付</string>
    <string name="handy_card_info">汗的储值卡（尾号6986）</string>
    <string name="vuene_login">指静脉登陆</string>
    <string name="please_put_handy">请输入汗的支付密码</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="finish_loading">我是有底线的</string>
    <string name="loading">正在加载...</string>
    <string name="binding">注册绑定</string>
    <string name="group_in_introduce">显示临近30分钟的数据,请确认入场</string>
    <string name="wechat_name">微信昵称</string>
    <string name="tel">电话</string>
    <string name="lesson">课程</string>
    <string name="status">状态</string>
    <string name="status_not_in">待入场</string>
    <string name="has_bind">已绑定</string>
    <string name="no_bind">未绑定</string>
    <string name="status_in">已入场</string>
    <string name="digitKeyppad_clear">清空</string>
    <string name="digitKeyppad_delect">退格</string>
    <string name="digitKeyppad_zero">0</string>
    <string name="digitKeyppad_nine">9</string>
    <string name="digitKeyppad_eight">8</string>
    <string name="digitKeyppad_seven">7</string>
    <string name="digitKeyppad_six">6</string>
    <string name="digitKeyppad_five">5</string>
    <string name="digitKeyppad_four">4</string>
    <string name="digitKeyppad_three">3</string>
    <string name="digitKeyppad_two">2</string>
    <string name="digitKeyppad_one">1</string>
    <string name="register_introduce_one">1.注册绑定</string>
    <string name="register_introduce_two">1.选择绑定方式</string>
    <string name="register_introduce_three">2.指静脉绑定</string>
    <string name="register_introduce_four">4.人脸绑定</string>
    <string name="register_introduce_five">3.绑定完成</string>
    <string name="bind_finish">绑定完成</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="save_all">保存所有</string>
    <string name="people_count">人数:</string>
    <string name="time">时间:</string>
    <string name="address">地点:</string>
    <string name="confirm_consume_lesson">确认消课</string>
    <string name="confirm_pre_lesson">确认预约</string>
    <string name="pay_count">支付金额：</string>
    <string name="work_step">操作步骤：</string>
    <string name="work_intro">打开支付宝，扫描下面二维码</string>
    <string name="work_intro_wechat">打开微信，扫描下面二维码</string>
    <string name="lesson_name">塑形杠铃操</string>
    <string name="should_pay">应付￥89.00</string>
    <string name="pay_time">剩余支付时间：</string>
    <string name="pre">上一步</string>
    <string name="back_home">返回首页</string>
    <string name="venue_ok">验证成功</string>
    <string name="back_system">返回系统设置</string>
    <string name="back_app">返回程序主页</string>
    <string name="back_system_main">返回系统主界面</string>
    <string name="restart">重启APP</string>
    <string name="open_door">门禁开启</string>
    <string name="close_door">门禁关闭</string>
    <string name="device_id">设备ID:</string>
    <string name="save_success">保存成功</string>
    <string name="venue_fail">验证失败</string>
    <string name="door_has_open">门禁已开启</string>
    <string name="please_confirm_bind">请确认是否已绑定手指？</string>
    <string name="manager_pwd">输入管理员密码</string>
    <string name="bind_way">选择绑定方式</string>
    <string name="login_way">选择登录方式</string>
    <string name="bind_way_1">方式1.</string>
    <string name="bind_way_1_intro">扫码绑定</string>
    <string name="bind_way_2">方式2.</string>
    <string name="bind_way_2_intro">手机绑定</string>
    <string name="code_intro">请使用微信扫描下方二维码完成验证绑定</string>
    <string name="code_intro_login">请使用微信扫描下方二维码完成验证登录</string>
    <string name="tel_intro">请在此输入手机号进行验证绑定</string>
    <string name="tel_intro_login">请在此输入手机号进行验证登录</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="right_finger">请正确放置手指</string>
    <string name="bind_right">绑定成功请开启你的健身之旅</string>
    <string name="now_card_num">当前手机号：159****5969</string>
    <string name="confirm_member_info">请确认会员信息</string>
    <string name="more">更多</string>
    <string name="last_text">上一步</string>
    <string name="go_buy">去购买</string>
    <string name="private_edu">私教课程</string>
    <string name="choose_login">选择登录</string>
    <string name="confirm_login">确定登录</string>
    <string name="choose_pay">选择支付</string>
    <string name="choose_pay_2">2.选择支付</string>
    <string name="choose_login_1">1.选择登录</string>
    <string name="pay_ticket">购票</string>
    <string name="login_way_1">方式1.</string>
    <string name="login_way_1_intro">扫码登录</string>
    <string name="login_way_2">方式2.</string>
    <string name="login_way_2_intro">手机登录</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_info">温馨提示：一经售出，此票恕不退款</string>
    <string name="zhifubao">支付宝</string>
    <string name="wechat_pay">微信支付</string>
    <string name="handy_pay">汗滴充值卡</string>
    <string name="private_coach">私教</string>
    <string name="how_to_use">如    何    使   用</string>
    <string name="one_person">1人</string>
    <string name="cancel_pay">确认取消订单？</string>
    <string name="click_error">不，点错啦</string>
    <string name="pay_ok">支付成功</string>
    <string name="pay_time_sheng">剩余支付时间 : </string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="coachText">授课教练 : </string>
    <string name="palce_address">授课地点 :</string>
    <string name="amount_text">总计</string>
    <string name="can_not_superposition">以上方式不可同时叠加使用</string>`
    <string name="renting_cabinet">智能租柜</string>
    <string name="selecter_time">选择时间</string>
    <string name="sure">确认</string>
    <string name="input_info">填写信息</string>
    <string name="rent_store">租用门店</string>
    <string name="rent_time">租柜时间</string>
    <string name="return_time">归还时间</string>
    <string name="cabinet_position">柜号位置</string>
    <string name="buy_sing_come">单次入场券</string>
    <string name="activate_card">汗的会员开卡</string>
    <string name="card_recharge">会员充值</string>
    <string name="single_buy_rules">1．本会所向会员免费提供WIFI、热水沐浴、沐浴用品、吹风机、体重秤、自助手机充电宝租借、休息区。\n2．会员会籍只限本人使用。\n3．会员单日单次入场使用费20元/次。\n4．当日预约私教课程及团操课程可免全日入场费，课程取消将自动扣除入场费。\n5．私教课程须提前至少24小时预约，取消需在上课前6小时，未取消及未上课系统自带扣除课时及费用。\n6．团操课程预约后，取消需在开课前2小时，未取消及未上课系统自带扣除课时及费用。\n7．团操课程开课后15分钟，会员不可进入课室上课，已缴纳费用无需退还。\n8．私教课程及团操课程收费需按照课程标准收费（详见各课程合同收费条款）</string>
    <string name="admission_ticket">入场券</string>
    <string name="go_login_text">已是会员，去登录</string>
    <string name="open_card">会员开卡</string>
    <string name="sure_info">确认信息</string>
    <string name="sure_user_info">请确认会员信息</string>
    <string name="lesson_consum">私教消课</string>
    <string name="rent_address">租用地点：</string>
    <string name="rent_times">租用时间：</string>
    <string name="rent_location">租用位置：</string>
    <string name="move_finger">请移开手指,再次放置</string>
    <string name="bind_ok">绑定成功</string>
    <string name="handy_member">汗的会员卡</string>
    <string name="error_tel">请输入正确的手机号</string>
    <string name="verify_has_send">验证码已发送</string>
    <string name="verify_first">请先获取验证码</string>
    <string name="verify_input">请输入验证码</string>
    <string name="now_card">当前手机号：</string>
    <string name="coach">教练</string>
    <string name="device_psw">设备密码</string>
    <string name="device_No">设备参数</string>
    <string name="please_device_psw">请输入设备密码</string>
    <string name="please_device_No">请输入设备参数</string>
    <string name="choose_lesson">选择课程</string>
    <string name="coach_confirm">教练确认</string>
    <string name="member_confirm">学员确认</string>
    <string name="open_string">开通入场</string>
    <string name="select_class">1.选择课程</string>
    <string name="select_time">2.选择时间</string>
    <string name="sure_pay">3.确认支付</string>
    <string name="pay_success">4.支付成功</string>
    <string name="one_select_time">1.选择时间</string>
    <string name="input_user_info">1.选择时间</string>
    <string name="select_class_time">课时</string>
    <string name="sure_pay_money">应付¥</string>
    <string name="jie_string">/节</string>
    <string name="yuan">￥</string>
    <string name="sure_other_pay">应付款:</string>
    <string name="sure_ali_pay">支付宝支付</string>
    <string name="sure_handy_pay">汗的充值卡</string>
    <string name="have_mun">已有</string>
    <string name="peoples_buy">人购买课程</string>
    <string name="verify_fail">验证失败</string>
    <string name="now_coach">当前教练:</string>
    <string name="now_lesson">当前课程:</string>
    <string name="error_type">设备类型错误</string>
    <string name="door_open">门已开</string>
    <string name="error_net">网络异常</string>
    <string name="parse_error">解析异常</string>
    <string name="qcode_have">二维码有</string>
    <string name="qcode_no">二维码无</string>
    <string name="face_have">人脸有</string>
    <string name="face_no">人脸无</string>
    <string name="veune_have">指静脉有</string>
    <string name="veune_no">指静脉无</string>
    <string name="one_last">您最少选择一种验证方式</string>
    <string name="login_fail">登陆失败,请确定账号或密码是否正确</string>
    <string name="sd_permession">请打开设备内存卡读写权限</string>
</resources>
